--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <div class="page-header">
 	<div class="container">
 		<h1>Şehir Api Projesi</h1>
-		<h3><p>Türkideki şehirlerin bilgilerini barındıran web servisidir.</p></h3>
+		<h3><p>Türkiye'deki şehirlerin bilgilerini barındıran web servisidir.</p></h3>
 		<p>Tüm şehirler 
 		<a href="{{url_for('api.get_cities')}}">Şehirler</a></p>
 		<p>Tek bir şehir için .../api/city/plaka_veya_şehir_adi</p>
